--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,13 +43,13 @@
           <%= typeof msg != 'undefined' ? msg : '' %>
         </div>
         <div id="moreContent" class="moreContent">
-          <div class="content 1" id="1">
+          <div class="content first" id="first">
             <%- include('addFeedForm'); %>
           </div>
-          <div class="content 2" id="2">
+          <div class="content second" id="second">
             <%- include('addFeedForm'); %>
           </div>
-          <div class="content 3" id="3">
+          <div class="content third" id="third">
             <%- include('addFeedForm'); %>
           </div>
         </div>
