--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -584,7 +584,7 @@ header {
         }
       }
 
-      &__weatherIcon {
+      &__weatherIcon, .icon {
         display: flex;
         align-items: flex-start;
         justify-content: end;
@@ -747,6 +747,7 @@ header {
   width: auto;
   margin: 0 1em 0 0;
 } */
+
 .footer {
   display: flex;
   width: 100%;
