--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -14,11 +14,14 @@ body {
   }
 }
 
+.flex {
+  display: flex;
+}
+
 .wrapper {
   height: 100%;
   padding: 0;
   margin: 0;
-  display: flex;
   flex-direction: column;
   // justify-content: center;
   // align-items: center;
@@ -39,7 +42,6 @@ body {
   }
 
   .rssTooltip {
-    display: flex;
     width: 100%;
     height: 100%;
     position: relative;
@@ -63,7 +65,7 @@ header {
   left: 0;
   width: 100%;
   justify-content: flex-end;
-  align-items: baseline;
+  align-items: center;
 }
 
 .settingsBtn {
@@ -97,7 +99,6 @@ header {
   font-size: 1em;
 
   .settings__child {
-    display: flex;
     justify-content: start;
     align-items: start;
     flex-direction: column;
@@ -109,7 +110,6 @@ header {
     border: 1px solid gray;
 
     &__header {
-      display: flex;
       flex-direction: row;
       width: auto;
       margin: 1% 0 0 1%;
@@ -148,7 +148,6 @@ header {
     .backgroundImageUploadForm,
     .owmToken,
     .toggleRss {
-      display: flex;
       flex-direction: row;
       align-items: baseline;
 
@@ -274,10 +273,10 @@ header {
   color: red;
   font-style: italic;
   margin-top: 1em;
+  font-size: 1.2em;
 }
 
 .mainContainer {
-  display: flex;
   width: 100%;
   height: 100%;
   align-items: center;
@@ -290,8 +289,8 @@ header {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  height: auto;
+  justify-content: center;
+  height: 100%;
   width: 100%;
 
   .msgContainer {
@@ -363,6 +362,7 @@ header {
   opacity: 0.7;
   border-radius: 0 0 15px 15px;
   overflow-y: auto;
+  margin-bottom: 2%;
 
   * {
     color: black;
@@ -374,7 +374,6 @@ header {
 
   .suggestion {
     padding: 0.5% 0 0.5% 1%;
-    display: flex;
     align-items: center;
     width: 99%;
     flex-direction: row;
@@ -400,7 +399,7 @@ header {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 0.5%;
   border-radius: 15px;
-  margin-top: 1%;
+  margin: 1% 0;
   display: none;
   flex-direction: column;
   height: auto;
@@ -408,10 +407,9 @@ header {
   .player {
     height: min-content;
     width: 100%;
-    display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
     &__leftSvg,
     &__rightSvg {
@@ -421,7 +419,7 @@ header {
   }
 
   &__player {
-    width: 90%;
+    width: 100%;
   }
 
   &Msg {
@@ -429,7 +427,6 @@ header {
     width: 100%;
     font-size: 1.6em;
     margin-bottom: 0.3em;
-    display: flex;
 
     .playlistInfo {
       font-size: 0.8em;
@@ -445,311 +442,321 @@ header {
       font-style: italic;
     }
   }
+
+  &__remove {
+    height: min-content;
+    cursor: pointer;
+  }
 }
 
 .moreContent {
-  display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: flex-start;
-  height: 45%;
+  height: 70%;
   width: 100%;
   font-size: 1.1em;
   flex-wrap: wrap;
   overflow: auto;
 
-  .content,
-  .rssContainer {
-    display: flex;
-  }
-
-  .content {
-    align-items: flex-start;
-    justify-content: flex-start;
-    height: min-content;
+  .content__container {
     width: 30%;
-    font-size: 1.2em;
-    margin: 1.3%;
+    justify-content: space-between;
     flex-direction: column;
+    font-size: 1em;
 
-    .blank {
-      display: none;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .addContent,
-    .blank,
-    .forecast,
-    .rssContainer,
-    .warning {
-      flex-direction: column;
-      background-color: rgba(0, 0, 0, 0.7);
-      border-radius: 15px;
+    .content {
+      height: 40vh;
       width: 100%;
-      font-size: 1.05em;
-    }
+      font-size: 1.2em;
 
-    .forecast,
-    .rssContainer {
-      margin-bottom: 2vh;
-      max-height: 100%;
-    }
-
-    .addContent,
-    .blank,
-    .rssContainer,
-    .warning {
-      padding: 0 2% 3%;
-      height: 100%;
-      margin-bottom: 2vh;
-      max-height: 100%;
-    }
-
-    .forecast {
-      display: flex;
-      padding-bottom: 3%;
-      height: 100%;
-
-      &__header {
-        display: inline-flex;
+      .blank {
+        display: none;
+        justify-content: center;
         align-items: center;
-        padding-right: 2%;
-
-        &__title {
-          width: 100%;
-          margin: 2% 0;
-          text-align: center;
-        }
-
-        .contentOptions {
-          display: none;
-          flex-direction: row;
-          align-items: baseline;
-          justify-content: space-between;
-          width: 17%;
-          margin-top: 1%;
-
-          .removeContentBtn,
-          .updateContentBtn {
-            padding: 5%;
-            cursor: pointer;
-          }
-
-          .removeContentBtn {
-            border: 1px solid red;
-            border-radius: 45%;
-          }
-        }
       }
 
-      &__content {
+      .flex {
         display: flex;
-        flex-direction: row;
+      }
+
+      .visible {
+        visibility: visible;
+      }
+
+      .invisible {
+        visibility: hidden;
+      }
+
+      .addContent,
+      .blank,
+      .forecast,
+      .rssContainer,
+      .warning {
+        flex-direction: column;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 15px;
         width: 100%;
+        font-size: 1.05em;
+      }
+
+      .forecast,
+      .rssContainer {
+        // margin-bottom: 2vh;
+        max-height: 100%;
+      }
+
+      .addContent,
+      .blank,
+      .rssContainer,
+      .warning {
+        padding: 0 2%;
         height: 100%;
-        font-size: 1.1em;
+        margin-bottom: 2vh;
+        max-height: 100%;
+      }
 
-        &__info {
-          margin: 0 2%;
-          display: flex;
+      .forecast {
+        &__header {
+          display: inline-flex;
+          align-items: center;
+          padding-right: 2%;
+
+          &__title {
+            width: 100%;
+            margin: 2% 0;
+            text-align: center;
+          }
+
+          .contentOptions {
+            display: none;
+            flex-direction: row;
+            align-items: baseline;
+            justify-content: space-between;
+            width: 17%;
+            margin-top: 1%;
+
+            .removeContentBtn,
+            .updateContentBtn {
+              padding: 5%;
+              cursor: pointer;
+            }
+
+            .removeContentBtn {
+              border: 1px solid red;
+              border-radius: 45%;
+            }
+          }
+        }
+
+        &__content {
+          flex-direction: row;
+          width: 100%;
           height: 100%;
-          width: 50%;
-          flex-direction: column;
+          font-size: 1.1em;
 
-          * {
-            display: flex;
-            align-items: center;
-          }
-
-          span {
-            margin-top: 2%;
-          }
-
-          .forecastIcon {
-            width: 15%;
+          &__info {
+            margin: 0 2%;
             height: 100%;
-            justify-content: center;
-            margin-top: 0;
-            margin-right: 10%;
-            font-size: 1.5em;
-          }
+            width: 50%;
+            flex-direction: column;
 
-          &__description__desc,
-          &__humidity__desc,
-          &__temp__desc {
-            display: flex;
-            margin: 0;
+            * {
+              display: flex;
+              align-items: center;
+            }
+
+            span {
+              margin-top: 2%;
+            }
+
+            .forecastIcon {
+              width: 15%;
+              height: 100%;
+              justify-content: center;
+              margin-top: 0;
+              margin-right: 10%;
+              font-size: 1.5em;
+            }
+
+            &__description__desc,
+            &__humidity__desc,
+            &__temp__desc {
+              margin: 0;
+            }
+          }
+        }
+
+        &__weatherIcon,
+        .icon {
+          align-items: flex-start;
+          justify-content: end;
+          width: 50%;
+
+          &__icon {
+            font-size: 3.5em;
+            margin-right: 5%;
           }
         }
       }
+    }
 
-      &__weatherIcon, .icon {
-        display: flex;
-        align-items: flex-start;
-        justify-content: end;
-        width: 50%;
+    .rssContainer__header {
+      display: inline-flex;
+      align-items: center;
 
-        &__icon {
-          font-size: 3.5em;
-          margin-right: 5%;
+      .contentOptions {
+        display: none;
+        flex-direction: row;
+        align-items: baseline;
+        justify-content: space-between;
+        width: 17%;
+        margin-top: 1%;
+
+        .removeContentBtn,
+        .updateContentBtn {
+          padding: 5%;
+          cursor: pointer;
+        }
+
+        .removeContentBtn {
+          border: 1px solid red;
+          border-radius: 45%;
         }
       }
     }
-  }
 
-  .rssContainer__header {
-    display: inline-flex;
-    align-items: center;
-
-    .contentOptions {
-      display: none;
-      flex-direction: row;
-      align-items: baseline;
-      justify-content: space-between;
-      width: 17%;
-      margin-top: 1%;
-
-      .removeContentBtn,
-      .updateContentBtn {
-        padding: 5%;
-        cursor: pointer;
-      }
-
-      .removeContentBtn {
-        border: 1px solid red;
-        border-radius: 45%;
-      }
-    }
-  }
-
-  .feedTitle {
-    display: block;
-    width: 90%;
-    text-align: center;
-    margin: 2% 0;
-  }
-
-  .addContent {
-    display: none;
-    width: 100%;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-
-    label {
+    .feedTitle {
+      display: block;
+      width: 90%;
+      text-align: center;
       margin: 2% 0;
     }
 
-    &__select {
-      color: black;
-      height: auto;
-    }
-
-    .select {
-      padding: 1%;
-    }
-
-    &__feed,
-    &__weather {
+    .addContent {
       display: none;
       width: 100%;
-      height: 100%;
-      justify-content: center;
-      align-items: center;
       flex-direction: column;
-    }
-
-    &__btnContainer {
-      position: fixed;
-      top: 65%;
-      width: 27%;
-      display: none;
-      height: max-content;
-      justify-content: end;
-    }
-
-    &__feed__input,
-    &__weather__input {
-      background: none;
-      border-top: none;
-      border-left: none;
-      border-right: none;
-      border-bottom: 1px solid lightblue;
-      border-radius: 5px;
-    }
-
-    &__cancelBtn,
-    &__submitBtn {
-      border: none;
-      border-radius: 12px;
-      padding: 1%;
-      cursor: pointer;
-    }
-
-    &__submitBtn {
-      background-color: green;
-      margin-left: 3%;
-    }
-
-    &__cancelBtn {
-      background-color: red;
-    }
-
-    .warning {
+      justify-content: flex-start;
       align-items: center;
-      background: none;
-      font-size: 0.9em;
-      height: auto;
-    }
-  }
 
-  .menu {
-    justify-content: center;
-  }
+      label {
+        margin: 2% 0;
+      }
 
-  .linksContainer {
-    min-width: 0;
-    flex: 1;
+      &__select {
+        color: black;
+        height: 2.1em;
+      }
 
-    a:visited {
-      color: grey;
-    }
+      .select {
+        padding: 1%;
+      }
 
-    .article {
-      display: flex;
-      flex-direction: column;
-      margin-top: 0.5em;
+      &__feed,
+      &__weather {
+        display: none;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
 
-      .link {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        min-width: 0;
+      &__btnContainer {
+        width: 100%;
+        display: none;
+        height: max-content;
+        justify-content: end;
+        margin-bottom: 2vh;
+      }
+
+      &__feed__input,
+      &__weather__input {
+        background: none;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        border-bottom: 1px solid lightblue;
+        border-radius: 5px;
+      }
+
+      &__cancelBtn,
+      &__submitBtn {
+        border: none;
+        border-radius: 12px;
+        padding: 1.5%;
         cursor: pointer;
       }
 
-      &__desc {
-        display: none;
-        position: relative;
-        top: -100px;
-        left: 100%;
-        background-color: white;
-        border-radius: 15px;
-        color: black;
-        text-align: justify;
-        padding: 5%;
+      &__submitBtn {
+        background-color: green;
+        margin-left: 3%;
       }
+
+      &__cancelBtn {
+        background-color: red;
+      }
+
+      .warning {
+        align-items: center;
+        background: none;
+        font-size: 0.9em;
+        height: auto;
+      }
+    }
+
+    .menu {
+      justify-content: center;
+    }
+
+    .linksContainer {
+      min-width: 0;
+      flex: 1;
+
+      a:visited {
+        color: grey;
+      }
+
+      .article {
+        flex-direction: column;
+        margin-top: 0.5em;
+
+        .link {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          min-width: 0;
+          cursor: pointer;
+        }
+
+        &__desc {
+          display: none;
+          position: relative;
+          top: -100px;
+          left: 100%;
+          background-color: white;
+          border-radius: 15px;
+          color: black;
+          text-align: justify;
+          padding: 5%;
+        }
+      }
+    }
+
+    .newContent {
+      .blank {
+        visibility: hidden;
+      }
+    }
+
+    .subRow {
+      margin-top: 7%;
     }
   }
 }
-/* .pubDate {
-  width: auto;
-  margin: 0 1em 0 0;
-} */
 
 .footer {
-  display: flex;
   width: 100%;
   flex-direction: column;
   align-items: center;
@@ -766,7 +773,6 @@ header {
   }
 
   .credits {
-    display: flex;
     align-items: baseline;
     justify-content: center;
     flex-direction: row;
@@ -818,24 +824,28 @@ header {
     width: 80%;
     flex-wrap: wrap;
 
-    .content.first {
-      margin-top: 0;
-    }
-
-    .content {
-      height: auto;
+    .content__container {
       width: 100%;
-      align-items: end;
-      justify-content: flex-start;
-      margin-top: 1.5em;
 
-      .forecast,
-      .rssContainer {
-        height: 100%;
+      .content.content1 {
+        margin-top: 5%;
+      }
 
-        .linksContainer {
-          .article {
-            padding-left: 0.6em;
+      .content {
+        height: auto;
+        width: 100%;
+        align-items: end;
+        justify-content: flex-start;
+        margin-top: 1.5em;
+
+        .forecast,
+        .rssContainer {
+          height: 100%;
+
+          .linksContainer {
+            .article {
+              padding-left: 0.6em;
+            }
           }
         }
       }
